chore: update @npmcli/template-oss@4.23.4

--- a/workspaces/libnpmpublish/package.json
+++ b/workspaces/libnpmpublish/package.json
@@ -27,7 +27,7 @@
     "@npmcli/eslint-config": "^5.0.1",
     "@npmcli/mock-globals": "^1.0.0",
     "@npmcli/mock-registry": "^1.0.0",
-    "@npmcli/template-oss": "4.23.3",
+    "@npmcli/template-oss": "^4.23.4",
     "nock": "^13.3.3",
     "tap": "^16.3.8"
   },
