--- a/package.json
+++ b/package.json
@@ -196,7 +196,7 @@
     "@npmcli/git": "^6.0.1",
     "@npmcli/mock-globals": "^1.0.0",
     "@npmcli/mock-registry": "^1.0.0",
-    "@npmcli/template-oss": "4.23.3",
+    "@npmcli/template-oss": "^4.23.4",
     "@tufjs/repo-mock": "^2.0.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
